# flask_learn

./: README_c1_intro.md  README_c2_templates.md  README_c3_web_forms.md  README_c4_databases.md  README_c5_user_login.md  pyproject.toml
microblog/: .flaskenv  app.db  config.py  microblog.py
microblog/app/: __init__.py  errors.py  forms.py  models.py  routes.py
microblog/app/templates/: 500.html  base.html  edit_profile.html  index.html  login.html  register.html  user.html
microblog/migrations/versions/: 166a8e772da2_post_table.py  1fbb4ed4a47d_new_fields_in_user_model.py  96f4d95428de_users_table.py
