[tool.poetry]
name = "flask_learn"
version = "0.1.0"
description = ""
authors = ["Somen <somenbg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
python-dotenv = "^0.14.0"
flask-wtf = "^0.14.3"
flask-sqlalchemy = "^2.4"
flask-migrate = "^2.5"
flask-login = "^0.5.0"
email-validator = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
